{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 180,
  "lineage": "b353e44b-57be-bcb3-28c1-ddfc853b4fb5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf-elastic-ip--v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "id": "eipalloc-0b9a6689a7463f0f6",
            "network_interface": "eni-0621bb2fbd6e88c6c",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            }
          },
          "dependencies": [
            "aws_internet_gateway.tf-internet-gateway-v2",
            "aws_network_interface.tf-network-interface--v2",
            "aws_security_group.tf-security-group--web-traffic",
            "aws_subnet.tf-subnet-v2",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-ec2-instance1--v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00db8dadb36c9815e",
            "arn": "arn:aws:ec2:us-east-2:905418244733:instance/i-05ed3b5774325acb5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ed3b5774325acb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0621bb2fbd6e88c6c"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0621bb2fbd6e88c6c",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c25265486208e982",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9d150dc9b48cfe1",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b1bf709774e3f40"
            ]
          },
          "dependencies": [
            "aws_network_interface.tf-network-interface--v2",
            "aws_security_group.tf-security-group--web-traffic",
            "aws_subnet.tf-subnet-v2",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-internet-gateway-v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:internet-gateway/igw-0fbf6fbbb6c0632d5",
            "id": "igw-0fbf6fbbb6c0632d5",
            "owner_id": "905418244733",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "vpc_id": "vpc-09f8e13adc725f056"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "tf-network-interface--v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:network-interface/eni-0621bb2fbd6e88c6c",
            "id": "eni-0621bb2fbd6e88c6c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d4:e7:ca:b3:0d",
            "owner_id": "905418244733",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00b1bf709774e3f40"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9d150dc9b48cfe1",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            }
          },
          "dependencies": [
            "aws_security_group.tf-security-group--web-traffic",
            "aws_subnet.tf-subnet-v2",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-route-table-v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:route-table/rtb-0c53e91107c3fd9aa",
            "id": "rtb-0c53e91107c3fd9aa",
            "owner_id": "905418244733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbf6fbbb6c0632d5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f8e13adc725f056"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-internet-gateway-v2",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-subnet--route-table--v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06057f09d10f381b4",
            "route_table_id": "rtb-0c53e91107c3fd9aa",
            "subnet_id": "subnet-0b9d150dc9b48cfe1"
          },
          "dependencies": [
            "aws_internet_gateway.tf-internet-gateway-v2",
            "aws_route_table.tf-route-table-v2",
            "aws_subnet.tf-subnet-v2",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-security-group--web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:security-group/sg-00b1bf709774e3f40",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00b1bf709774e3f40",
            "ingress": [],
            "name": "Allow web traffic",
            "name_prefix": "",
            "owner_id": "905418244733",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f8e13adc725f056"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-subnet-v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:subnet/subnet-0b9d150dc9b48cfe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9d150dc9b48cfe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418244733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "vpc_id": "vpc-09f8e13adc725f056"
          },
          "dependencies": [
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc-v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:vpc/vpc-09f8e13adc725f056",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d7947d1a53222dc",
            "default_route_table_id": "rtb-0bd73156f91d11f2b",
            "default_security_group_id": "sg-0449727416742be86",
            "dhcp_options_id": "dopt-00822fa6521e5fa5b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f8e13adc725f056",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd73156f91d11f2b",
            "owner_id": "905418244733",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tf-sg-rule--out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:security-group-rule/sgr-077e7f6b1fa3ed2b5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-077e7f6b1fa3ed2b5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00b1bf709774e3f40",
            "security_group_rule_id": "sgr-077e7f6b1fa3ed2b5",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-security-group--web-traffic",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf-sg-rule--http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:security-group-rule/sgr-06c549063826d6ea1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06c549063826d6ea1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00b1bf709774e3f40",
            "security_group_rule_id": "sgr-06c549063826d6ea1",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-security-group--web-traffic",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf-sg-rule--https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:security-group-rule/sgr-0b85ee094ec648c3e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b85ee094ec648c3e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00b1bf709774e3f40",
            "security_group_rule_id": "sgr-0b85ee094ec648c3e",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-security-group--web-traffic",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf-sg-rule--ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418244733:security-group-rule/sgr-02a72ee5b612eb274",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02a72ee5b612eb274",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00b1bf709774e3f40",
            "security_group_rule_id": "sgr-02a72ee5b612eb274",
            "tags": {
              "name": "v2"
            },
            "tags_all": {
              "name": "v2"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-security-group--web-traffic",
            "aws_vpc.tf-vpc-v2"
          ]
        }
      ]
    }
  ]
}